Bug 447772 - flatpak repo added when a .flatpakref file is installed is not listed in 'Settings' page until Discover is restarted
Summary: flatpak repo added when a .flatpakref file is installed is not listed in 'Set...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Flatpak Backend (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR minor
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-01 12:53 UTC by Patrick Silva
Modified: 2022-01-20 19:50 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-01-01 12:53:41 UTC
STEPS TO REPRODUCE
1. make sure AppCenter flatpak repo is not activated on your system
2. go to https://appcenter.elementary.io/com.github.phase1geo.annotator/
3. download the .flatpakref file by clicking on "Download as Flatpak" button
4. open the downloaded .flatpakref file with Discover
5. install the .flatpakref file (its repo is added as expected)
6. click on 'Settings' in the left side: the flatpak repo added in the step 5 is not listed under 'Flatpak'
7. restart Discover and go to 'Settings': now the flatpak repo is lsited under 'Flatpak' as expected

OBSERVED RESULT
flatpak repo added when a .flatpakref file is installed is not listed in 'Settings' page until Discover is restarted

EXPECTED RESULT
flatpak repo should be vailable in 'Settings' page immediately after the step 5.
Restarting Discover should not be required.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.23.80
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.3
Graphics Platform: Wayland
Comment 1 Bug Janitor Service 2022-01-17 16:03:40 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/226
Comment 2 Aleix Pol 2022-01-20 13:56:06 UTC
Git commit 42fca287dbd4fc5d057bbe74a85f68653731f014 by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 20/01/2022 at 13:09.
Pushed by apol into branch 'master'.

flatpak: Add the repositories added by a transaction

M  +1    -0    libdiscover/backends/FlatpakBackend/FlatpakBackend.cpp
M  +4    -0    libdiscover/backends/FlatpakBackend/FlatpakBackend.h
M  +3    -0    libdiscover/backends/FlatpakBackend/FlatpakJobTransaction.h
M  +16   -0    libdiscover/backends/FlatpakBackend/FlatpakSourcesBackend.cpp
M  +1    -0    libdiscover/backends/FlatpakBackend/FlatpakSourcesBackend.h
M  +8    -2    libdiscover/backends/FlatpakBackend/FlatpakTransactionThread.cpp
M  +8    -1    libdiscover/backends/FlatpakBackend/FlatpakTransactionThread.h

https://invent.kde.org/plasma/discover/commit/42fca287dbd4fc5d057bbe74a85f68653731f014
Comment 3 Aleix Pol 2022-01-20 13:56:27 UTC
Git commit 550f0c29748a413685bcf0446ceb4642234dee91 by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 20/01/2022 at 13:56.
Pushed by apol into branch 'Plasma/5.24'.

flatpak: Add the repositories added by a transaction


(cherry picked from commit 42fca287dbd4fc5d057bbe74a85f68653731f014)

M  +1    -0    libdiscover/backends/FlatpakBackend/FlatpakBackend.cpp
M  +4    -0    libdiscover/backends/FlatpakBackend/FlatpakBackend.h
M  +3    -0    libdiscover/backends/FlatpakBackend/FlatpakJobTransaction.h
M  +16   -0    libdiscover/backends/FlatpakBackend/FlatpakSourcesBackend.cpp
M  +1    -0    libdiscover/backends/FlatpakBackend/FlatpakSourcesBackend.h
M  +8    -2    libdiscover/backends/FlatpakBackend/FlatpakTransactionThread.cpp
M  +8    -1    libdiscover/backends/FlatpakBackend/FlatpakTransactionThread.h

https://invent.kde.org/plasma/discover/commit/550f0c29748a413685bcf0446ceb4642234dee91