flatpak: Add the repositories added by a transaction

BUG: 447772


(cherry picked from commit 42fca287dbd4fc5d057bbe74a85f68653731f014)